--- a/Day1/Day1.fsproj
+++ b/Day1/Day1.fsproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="Assignment2.fs" />
     <Compile Include="Assignment1.fs" />
   </ItemGroup>
 
